--- a/templates/ByChatGPT.html
+++ b/templates/ByChatGPT.html
@@ -257,11 +257,11 @@
             <div class="kpi-value" id="kpi-water-supply" style="color:#333;">1,069</div>
           </div>
 
-          <!-- ต้นทุนผลผลิต -->
+          <!-- เกณฑ์ผลผลิต -->
           <div class="cost-card">
             <div class="cost-header">
               <div class="cost-icon"></div>
-              <div class="cost-title">ต้นทุนผลผลิต</div>
+              <div class="cost-title">เกณฑ์ผลผลิต</div>
             </div>
 
             <div class="cost-bar-wrapper">
